- Move breadcrumbs up a level - Fix display  of related items on smaller screens

--- a/static/css/sass/cdr_ui_styles.scss
+++ b/static/css/sass/cdr_ui_styles.scss
@@ -300,11 +300,17 @@ p.no-search-results {
 
 /* Collection Page */
 .browse-header {
-  background-color: #EBEBEB;
-  box-shadow: inset 0 10px 5px -5px rgba(0, 0, 0, .5);
+  background-color: white;
+  box-shadow: inset 0 10px 5px -5px rgba(0, 0, 0, 0.5);
   color: #3D4D5B;
   margin: 0;
-  padding: .75rem;
+  padding-top: 5px;
+
+  .browse-top {
+    background-color: #EBEBEB;
+    margin: 0;
+    padding: 0 .75rem;
+  }
 
   h2 {
     font-size: 36px;
@@ -879,6 +885,18 @@ table.dataTable {
       table {
         margin: 0;
       }
+    }
+  }
+}
+
+.relateditem {
+  .thumbnail {
+    .thumbnail-badge {
+      right: 40px;
+    }
+
+    .thumbnail-viewer {
+      margin: auto;
     }
   }
 }
