--- a/static/js/vue-cdr-access/src/assets/common-styles.css
+++ b/static/js/vue-cdr-access/src/assets/common-styles.css
@@ -28,4 +28,5 @@ a.button.is-link span {
     padding-left: 0;
     font-weight: bold;
     color: #0A5274;
+    word-wrap: anywhere;
 }
